@@ -9,7 +9,6 @@
 	<ul>
                 <li>Most property dlgs: check for readOnly if no sufficient rights are available
                 <li>redirect frmQuery output to file
-                <li>Locks display
 		<li>Allow sorting/filtering of data in EditGrid.
 		<li>Make dist should also write the proper versions in pgadmin3 spec file.
 		<li>CREATE TABLE LIKE table
