@@ -15,19 +15,34 @@
     <object class="wxButton" name="btnRefresh">
       <label>Refresh</label>
       <default>1</default>
-      <pos>143,4d</pos>
+      <pos>283,4d</pos>
       <size>53,15d</size>
     </object>
     <object class="wxButton" name="btnClose">
       <label>Close</label>
-      <pos>206,4d</pos>
+      <pos>342,4d</pos>
       <size>53,15d</size>
     </object>
-    <object class="wxListCtrl" name="lstStatus">
+    <size>400,300d</size>
+    <object class="wxNotebook" name="nbStatus">
       <pos>6,24d</pos>
-      <size>253,123d</size>
-      <style>wxLC_REPORT|wxSUNKEN_BORDER</style>
+      <size>385,270d</size>
+      <object class="notebookpage">
+        <label>Status</label>
+        <object class="wxListCtrl" name="lstStatus">
+          <pos>6,24</pos>
+          <size>385,270</size>
+          <style>wxLC_REPORT|wxSUNKEN_BORDER</style>
+        </object>
+      </object>
+      <object class="notebookpage">
+        <label>Locks</label>
+        <object class="wxListCtrl" name="lstLocks">
+          <pos>6,24</pos>
+          <size>385,270</size>
+          <style>wxLC_REPORT|wxSUNKEN_BORDER</style>
+        </object>
+      </object>
     </object>
-    <size>266,153d</size>
   </object>
 </resource>
