@@ -1,6 +1,7 @@
 <ul>
 	<li>V1.0.0
   	<ul>
+		<li>2003-10-03 DP - Added locks tab to server status window.
 		<li>2003-10-03 DP - Reconnect to databases properly after failed attempt to drop.
 		<li>2003-10-02 DP - Re-enable the query builder.
                 <li>2003-10-01 AP - generic TreeItem renderer for gtk [+] / [-]
